[ Rutas ] » Contenido actualizado

--- a/src/app/componentes/rutas/rutas.component.html
+++ b/src/app/componentes/rutas/rutas.component.html
@@ -4,7 +4,6 @@
 
   <span class="tarea-pendiente">Modificaciones en subida a producción</span>
   <span class="tarea-pendiente">Rutas absolutas y rutas relativas en el atributo <b>routerLink</b></span>
-  <span class="tarea-pendiente">Hacer una pequeña introducción para explicar el esquema general de las explicaciones</span>
   <span class="tarea-pendiente">Cuando se envían parámetros en la URL con un botón, se puede hacer de forma estática, repitiendo los ítems del grid, con un *ngFor o con un #identificador de Angular. Explicar las tres formas</span>
   <span class="tarea-pendiente">Recuerda hablar del servicio web para obtener la información asociada al elemento seleccionado según el id recibido por parámetro</span>
 
@@ -207,7 +206,7 @@
     <li>En el resultado captado en la suscripción tenemos un objeto para todos los parámetros, donde el lado izquierdo tiene el mismo nombre que en el fichero de rutas (poner captura de cobnsola de js)</li>
   </ul>
   
-  <h3>Rutas hijas</h3>
+  <h3>7. Rutas hijas</h3>
   <hr>
 
   <ul>
@@ -224,6 +223,7 @@
   </ul>
 
   <img src="assets/rutas-hijas1.png" alt="">
+  <caption><strong>Figura X.</strong> Breve explicación del contenido ilustrado en la figura</caption>
 
   <ul>
     <li>Dentro de este link encontraremos varios botones que nos redirigirán a las subrutas correspondientes según el caso (crear usuario, editar usuario...).</li>
@@ -239,8 +239,9 @@
   </ul>
 
   <img src="assets/rutas-hijas2.png" alt="">
+  <caption><strong>Figura X.</strong> Breve explicación del contenido ilustrado en la figura</caption>
 
-  <h3>Dividir el fichero de rutas en varios ficheros de rutas</h3>
+  <h3>8. Dividir el fichero de rutas en varios ficheros de rutas</h3>
   <hr>
 
   <ul>
@@ -253,6 +254,7 @@
   </ul>
 
   <img src="assets/rutas-hijas3.png" alt="">
+  <caption><strong>Figura X.</strong> Breve explicación del contenido ilustrado en la figura</caption>
 
   <ul>
     <li>Vale... esto se explica mejor con una imagen. En la captura de arriba aparece el contenido del fichero de rutas DE USUARIOS</li>
@@ -263,6 +265,7 @@
   </ul>
 
   <img src="assets/rutas-hijas4.png" alt="">
+  <caption><strong>Figura X.</strong> Breve explicación del contenido ilustrado en la figura</caption>
 
   <ul>
     <li>En la captura de arriba está el fichero de rutas principal</li>
@@ -272,7 +275,7 @@
     <li>Es interesante ver cómo se exportan las constantes</li>
   </ul>
 
-  <h3>Obtener parámetros del padre desde una ruta hija</h3>
+  <h3>9. Obtener parámetros del padre desde una ruta hija</h3>
   <hr>
 
   <ul>
@@ -284,6 +287,7 @@
   </ul>
 
   <img src="assets/rutas-hijas5.png" alt="">
+  <caption><strong>Figura X.</strong> Breve explicación del contenido ilustrado en la figura</caption>
 
   <ul>
     <li>El problema es que estamos intentando acceder al parámetro del componente PADRE, no del hijo, por eso no se hace igual</li>
