[ Ficheros ] » Sección creada

--- a/src/app/componentes/menu/menu.component.html
+++ b/src/app/componentes/menu/menu.component.html
@@ -8,6 +8,12 @@
       </a>
     </li>
     <li class="item" routerLinkActive="active" (click)="abrirSubmenu('')">
+      <a id="ficheros" routerLink="ficheros">      
+        <i class="icon fa fa-fw fa-folder" aria-hidden="true"></i>
+        Ficheros
+      </a>
+    </li>
+    <li class="item" routerLinkActive="active" (click)="abrirSubmenu('')">
       <a id="typescript" routerLink="typescript">      
         <i class="icon fa fa-fw fa-gear" aria-hidden="true"></i>
         TypeScript
