[ General ] » Cambios de poca importancia

--- a/src/app/componentes/directivas/directiva-propia/directiva-propia.component.html
+++ b/src/app/componentes/directivas/directiva-propia/directiva-propia.component.html
@@ -1,20 +1,24 @@
-<div class="animated fadeIn">
-    <h2>Directivas propias</h2>
-    <hr>
+<div id="notas" class="animated fadeIn">
     
-    <p appResaltado>
-      Hazme hover!
-    </p>
+  <h2>Directivas propias</h2>
+  <hr>
+
+  <span class="tarea-pendiente">Unificar los componentes de directivas en uno solo y diferenciar el contenido de cada uno con subapartados</span>
     
-    <p [appResaltado]="'rgb(200,100,50)'">
-      Hazme hover a mí también!
-    </p>
-    
-    <p [appResaltado]="'red'">
-      Hazme hover a mí también!
-    </p>
-    
-    <p [appResaltado]="'#000000'">
-      Hazme hover a mí también!
-    </p>
+  <p appResaltado>
+    Hazme hover!
+  </p>
+  
+  <p [appResaltado]="'rgb(200,100,50)'">
+    Hazme hover a mí también!
+  </p>
+  
+  <p [appResaltado]="'red'">
+    Hazme hover a mí también!
+  </p>
+  
+  <p [appResaltado]="'#000000'">
+    Hazme hover a mí también!
+  </p>
+  
 </div>
