--- a/src/app/componentes/error/error.component.html
+++ b/src/app/componentes/error/error.component.html
@@ -1,6 +1,6 @@
 <div id="notas" class="animated fadeIn">
 
-  <h2>Sección no encontrara</h2>
+  <h2>Sección no encontrada</h2>
 
   <ul>
     <li>La sección que intenta cargar no está recogida en esta web</li>
