--- a/src/app/componentes/inicio/inicio.component.html
+++ b/src/app/componentes/inicio/inicio.component.html
@@ -2,14 +2,8 @@
 
   <h2>Bienvenido</h2>
 
-  <span class="tarea-pendiente">Pintar el favicon del color corporativo</span>
-  <span class="tarea-pendiente">Explicar en esta sección cómo meterle jQuery</span>
-  <span class="tarea-pendiente">Permitir ocultar el menú</span>
-  <span class="tarea-pendiente">Crear subítems dentro del navbar para las directivas y las rutas</span>
-  <span class="tarea-pendiente">Existe un componente llamado <i>directivas</i> fuera del directorio de componentes</span>
-  <span class="tarea-pendiente">Unificar los componentes de directivas en uno solo y diferenciar el contenido de cada uno con subapartados</span>
-  <span class="tarea-pendiente">Al hacer clic en un subítem de las directivas dentro del sidebar, que te mueva el scroll al apartado correspondiente</span>
-
+  <div class="pendiente">Permitir ocultar el menú</div>
+  
   <h3>Propósito</h3>
   <hr>
 
@@ -23,16 +17,17 @@
 
   <ul>
     <li>Angular es un framework de front desarrollado por Google que utiliza TypeScript</li>
-    <li>Un framework es un conjunto de herramientas software que quedan a disposición del programador para elaborar aplicaciones web contando con un gran abanico de prestaciones que no tendrías a tu disposición programando desde cero</li>
-    <li>TypeScript es un lenguaje de programación desarrollado por Microsoft que utiliza JavaScript como base crear un lenguaje de programación más robusto</li>
-    <li>Ofrece numerosas prestaciones adicionales con las que JavaScript no contaba en principio, por lo que se conoce como un superconjunto de JavaScript</li>
-    <li>Algunas de dichas prestaciones vienen a ser el tipado de variables, notificación de errores previa al periodo de ejecución, etc.</li>
+    <li>Un framework es un set de herramientas software que el programador tiene a su disposición para elaborar aplicaciones web contando con un gran abanico de prestaciones que no tendrías programando desde cero</li>
+    <li>TypeScript (de ahora en adelante, TS) es un lenguaje de programación desarrollado por Microsoft que utiliza JavaScript (de ahora en adelante, JS) como base crear un lenguaje de programación más robusto</li>
+    <li>Ofrece numerosas prestaciones adicionales con las que JS no cuenta, por lo que se conoce como un superconjunto de JS, como tipado de variables, notificación de errores previa al periodo de ejecución, etc.</li>
   </ul>
 
   <h3>jQuery</h3>
   <hr>
 
-  <span class="tarea-pendiente" style="margin-bottom: 40px">Buscar la diferencia entre <b>event.target</b> y <b>event.currentTarget</b></span>
+  <div class="pendiente">Crear una sección solo de jQuery</div>
+  <div class="pendiente">Buscar la diferencia entre <b>event.target</b> y <b>event.currentTarget</b></div>
+  <div class="pendiente mb-40">Explicar cómo hacer smooth scrolling para navegar entre los apartados <u>de una misma sección</u></div>
 
   <ul>
     <li>Desde el directorio de nuestro proyecto ejecutamos el comando <b>& npm install jquery --save</b> para instalar jQuery dentro del directorio <i>node_modules</i></li>
