[ Navbar ] » Nuevas secciones incluidas

--- a/src/app/componentes/menu/menu.component.html
+++ b/src/app/componentes/menu/menu.component.html
@@ -80,5 +80,12 @@
         Depuración
       </a>
     </li>
+    <li class="item" routerLinkActive="active" (click)="abrirSubmenu('')">
+        <a id="aplicaciones" routerLink="aplicaciones">
+          <i class="icon fa fa-fw fa-coffee" aria-hidden="true"></i>
+          Aplicaciones
+          <i class="caret fa fa-fw fa-angle-right"></i>
+        </a>
+      </li>
   </ul>
 </div>
