--- a/src/app/componentes/inicio/inicio.component.html
+++ b/src/app/componentes/inicio/inicio.component.html
@@ -3,6 +3,9 @@
   <h2>Bienvenido</h2>
 
   <div class="pendiente">Permitir ocultar el menú</div>
+  <div class="pendiente">El índice de cada sección debiera ser un componente</div>
+  <div class="pendiente">Cada sección debe tener un button top a modo de componente</div>
+  <div class="pendiente">En los servicios hablar de lo que es un observable, una inyección y una suscripción</div>
   
   <h3>Propósito</h3>
   <hr>
@@ -27,7 +30,8 @@
 
   <div class="pendiente">Crear una sección solo de jQuery</div>
   <div class="pendiente">Buscar la diferencia entre <b>event.target</b> y <b>event.currentTarget</b></div>
-  <div class="pendiente mb-40">Explicar cómo hacer smooth scrolling para navegar entre los apartados <u>de una misma sección</u></div>
+  <div class="pendiente">Explicar cómo hacer smooth scrolling para navegar entre los apartados <u>de una misma sección</u></div>
+  <div class="pendiente mb-40">Explicar cómo navegar entre las mismas secciones dentro de una misma página web (lo tienes hecho en el hook OnInit del componente Rutas, en el índice)</div>
 
   <ul>
     <li>Desde el directorio de nuestro proyecto ejecutamos el comando <b>& npm install jquery --save</b> para instalar jQuery dentro del directorio <i>node_modules</i></li>
