[ Despliegue ] » Contenido actualizado

--- a/src/app/componentes/despliegue/despliegue.component.html
+++ b/src/app/componentes/despliegue/despliegue.component.html
@@ -2,7 +2,7 @@
 
   <h2>Despliegue</h2>
 
-  <span class="tarea-pendiente">Comprobar si los fallos del apartado 4 se dan cuando se sube una app de Angular en el directorio raíz del servidor de producción</span>
+  <div class="pendiente">Comprobar si los fallos del apartado 4 se dan cuando se sube una app de Angular en el directorio raíz del servidor de producción</div>
 
   <h3>1. Fichero <i>environment.ts</i></h3>
   <hr>
